mute some MSVC warnings about unreferenced local functions
Works only by disabling for the file in the project file.
This seems to be some bug, it is clearly wrong.

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -3624,6 +3624,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Editor\Palette\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3632,6 +3633,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Editor\Palette\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3640,6 +3642,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Editor\Palette\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3648,6 +3651,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Editor\Palette\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3656,6 +3660,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Editor\Palette\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 					<FileConfiguration
@@ -3664,6 +3669,7 @@
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Editor\Palette\"
+							DisableSpecificWarnings="4505"
 						/>
 					</FileConfiguration>
 				</File>
