--- a/projectfiles/VC9/wesnothlib.vcproj
+++ b/projectfiles/VC9/wesnothlib.vcproj
@@ -146,7 +146,7 @@
 		<Configuration
 			Name="Debug_with_VLD|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)\wesnothlib"
 			ConfigurationType="4"
 			CharacterSet="2"
 			BuildLogFile="$(IntDir)\BuildLog.htm"
