Missing file in VC9 project.

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -16762,6 +16762,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\src\unit_animation.hpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\src\unit_display.cpp"
 			>
 		</File>
