Add a new pane widget.
The code is used to experiment with a different approach of the
implementation of a listbox.

--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -111,6 +111,7 @@ src/gui/widgets/listbox.cpp
 src/gui/widgets/list.cpp
 src/gui/widgets/minimap.cpp
 src/gui/widgets/multi_page.cpp
+src/gui/widgets/pane.cpp
 src/gui/widgets/panel.cpp
 src/gui/widgets/password_box.cpp
 src/gui/widgets/progress_bar.cpp
