Update the MSVC9 project

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="wesnoth"
 	ProjectGUID="{65ACA13F-5F5C-4768-A89A-ECF6C16F1512}"
 	RootNamespace="wesnoth"
@@ -5169,6 +5169,14 @@
 				</File>
 				<File
 					RelativePath="..\..\src\gui\widgets\multi_page.hpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\gui\widgets\pane.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\gui\widgets\pane.hpp"
 					>
 				</File>
 				<File
