--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -164,5 +164,6 @@ src/widgets/scrollbar.cpp
 src/widgets/scrollpane.cpp
 src/widgets/slider.cpp
 src/widgets/textbox.cpp
+src/widgets/viewport.cpp
 src/widgets/widget.cpp
 src/wml_exception.cpp
