Adds helper code to assist in widget placement.
The code is used to experiment with a different approach of the
implementation of a listbox.

--- a/po/wesnoth-lib/POTFILES.in
+++ b/po/wesnoth-lib/POTFILES.in
@@ -12,6 +12,9 @@ src/gui/auxiliary/iterator/iterator.cpp
 src/gui/auxiliary/iterator/walker_grid.cpp
 src/gui/auxiliary/iterator/walker_widget.cpp
 src/gui/auxiliary/log.cpp
+src/gui/auxiliary/placer.cpp
+src/gui/auxiliary/placer/horizontal_list.cpp
+src/gui/auxiliary/placer/vertical_list.cpp
 src/gui/auxiliary/tips.cpp
 src/gui/auxiliary/widget_definition/button.cpp
 src/gui/auxiliary/widget_definition.cpp
