--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -335,6 +335,12 @@
 		<Unit filename="..\..\src\gui\auxiliary\notifier.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\old_markup.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\old_markup.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\placer.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\placer.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\placer\horizontal_list.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\placer\horizontal_list.hpp" />
+		<Unit filename="..\..\src\gui\auxiliary\placer\vertical_list.cpp" />
+		<Unit filename="..\..\src\gui\auxiliary\placer\vertical_list.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\timer.cpp" />
 		<Unit filename="..\..\src\gui\auxiliary\timer.hpp" />
 		<Unit filename="..\..\src\gui\auxiliary\tips.cpp" />
